# AI_Content_Agent_Replica

./: .coverage  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  master_config.yaml  prompt.md  pyproject.toml  release-please-config.json  sample_curl_content_summarize.sh  sample_curl_preview.sh  sample_curl_summary.sh  sample_curl_title_generate.sh  setup_agent.py  tag.json  temp_trace.md  test_reports.md
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: agent-register.yaml  daily-deploy-test-env.yaml  dev-ms-deployment.yaml  develop-ms-deployment.yaml  pull_request_test_workflow.yml  qa-ms-deployment.yaml  release-ms-deployment.yaml  semver-release.yaml  snyk.yml
Install/: README.md  install_linux.sh  install_mac.sh  install_windows.ps1
helm-values/: dev-values.yaml  perf-values.yaml  release-values.yaml  values.yaml
scripts/: README.md  generate_test_report.sh  merge_driver_test_report.sh  run_all_tests.py  setup_hooks.sh  test_logging_all_packages.py  test_memory.py  test_survey_summary_rest.py  test_survey_summary_ws.py
src/agent/: README.md  __init__.py  crew.py
src/agent/api/: __init__.py  agent_service.py  constants.py  exceptions.py  kafka_pipeline.py  routes.py  schemas.py  tenant.py
src/agent/config/: __init__.py  chat_summariser_agents.yaml  chat_summariser_tasks.yaml  content_summariser_agents.yaml  content_summariser_tasks.yaml  preview_generator_agents.yaml  preview_generator_tasks.yaml  title_generator_agents.yaml  title_generator_tasks.yaml  write_prompts_to_langfuse.py
src/agent/db_connections/: get_langfuse_keys.py  get_mongo_connector.py  get_redis_connector.py  get_redis_keys.py  get_sql_connector.py
src/agent/tools/: confluence_pages_fetcher_tool.py  confluence_search_and_retrive_tool.py  elastic_search_query_tool.py  slack_tool.py
src/agent/utils/logging_config/: __init__.py  base.py  config.py  constants.py  context.py  crew_run.py  database.py  events.py  memory.py
tests/: README.md  conftest.py  test_agent_service.py  test_api_routes.py  test_constants.py  test_crew.py  test_db_connections.py  test_exceptions.py  test_kafka_pipeline.py  test_logging_config.py  test_main.py  test_schemas.py  test_tenant.py  test_tools.py
